# rankradar-os

./: .env.example  .gitignore  README.md  RUN_REPORT.md  docker-compose.yml  package-lock.json  package.json  render.yaml
apps/api/: package.json
apps/api/src/: config.js  errors.js  proxy.js  rateLimit.js  router.js  server.js
apps/api/tests/: router.test.mjs
apps/web/: index.html  package.json  vite.config.js
apps/web/src/: App.jsx  api.js  styles.css
apps/web/src/__tests__/: smoke.test.jsx
apps/web/src/components/: AlertsPanel.jsx  FilterBar.jsx  Heatmap.jsx  KeywordTable.jsx  ProductDetailModal.jsx  ProductMetrics.jsx  ProductOverview.jsx  Skeleton.jsx  StatCard.jsx  TrendChart.jsx  VariationPanel.jsx
apps/web/src/pages/: Settings.jsx
database/migrations/: 001_rankradar_init.sql
docs/: architecture.md
scripts/: dev-api.sh  dev-python.sh  dev-web.sh
services/rankradar-worker/: pyproject.toml  requirements.txt
services/rankradar-worker/app/: __init__.py  alerts.py  datadive_client.py  demo_data.py  main.py  models.py  mongo_store.py  settings.py  store.py  summaries.py  sync.py
services/rankradar-worker/scripts/: migrate_mongo.py
services/rankradar-worker/tests/: test_alerts.py  test_mock_client.py  test_summaries.py
